# monkey

./: CMakeLists.txt  README.md  main.cpp  setup.py
src/: assetmanager.cpp  assetmanager.h  batch.cpp  batch.h  bounds.cpp  bounds.h  cam25.cpp  cam25.h  camera.cpp  camera.h  component.cpp  component.h  debug.h  engine.cpp  engine.h  enginedraw.cpp  enginedraw.h  error.cpp  error.h  event.h  file.cpp  file.h  font.cpp  font.h  globals.h  hashpair.h  input.h  keylistener.cpp  keylistener.h  light.cpp  light.h  linebatch.cpp  linebatch.h  main.cpp  model.cpp  model.h  monkeyfu.cpp  monkeyfu.h  mouselistener.cpp  mouselistener.h  (+35 more)
src/actions/: addnode.cpp  addnode.h  animate.cpp  animate.h  blink.cpp  blink.h  callfunc.cpp  callfunc.h  delay.cpp  delay.h  move.cpp  move.h  move_dynamics.cpp  move_dynamics.h  moveacc.cpp  moveacc.h  nodeaction.cpp  nodeaction.h  remove.cpp  remove.h  say.cpp  say.h  sierra.cpp  sierra.h  turn.cpp  turn.h  waitforkey.cpp  waitforkey.h  walk.cpp  walk.h
src/batch/: linebatch.cpp  linebatch.h  quadbatch.cpp  quadbatch.h  trianglebatch.cpp  trianglebatch.h
src/components/: anim_tiled_renderer.cpp  anim_tiled_renderer.h  baseline.cpp  baseline.h  batchrenderer.h  collider.cpp  collider.h  controller.cpp  controller.h  controller2d.cpp  controller2d.h  controller3d.cpp  controller3d.h  controller_state.cpp  controller_state.h  cursor.cpp  cursor.h  dynamics.h  follow.cpp  follow.h  hotspot.cpp  hotspot.h  keyboard.cpp  keyboard.h  mariocontroller.cpp  mariocontroller.h  move_translate.cpp  move_translate.h  mover.cpp  mover.h  nodeevent.cpp  nodeevent.h  parallax.cpp  parallax.h  platform.cpp  platform.h  quad_renderer.cpp  quad_renderer.h  renderer.cpp  renderer.h  (+18 more)
src/math/: earcut.h  funcxy.cpp  funcxy.h  geometry.cpp  geometry.h  graph.cpp  graph.h  jointTransform.cpp  random.cpp  random.h
src/models/: drawablemodel.cpp  drawablemodel.h  iquad.cpp  iquad.h  lines.cpp  lines.h  modelmake.cpp  modelmake.h  multi.cpp  multi.h  multisprite.cpp  multisprite.h  paramcurve.cpp  paramcurve.h  polymesh.cpp  polymesh.h  quad.cpp  quad.h  skeletal.cpp  skeletal.h  sprite.cpp  sprite.h  text.cpp  text.h  tiled.cpp  tiled.h  tilemap.cpp  tilemap.h  tilemodel.cpp  tilemodel.h  triangles.cpp  triangles.h
src/nodes/: itemlist.cpp  itemlist.h  multinode.cpp  multinode.h  road.cpp  road.h  text.cpp  text.h  textedit.cpp  textedit.h  tileworld.cpp  tileworld.h  walkarea.cpp  walkarea.h
src/physics/: verlet.h
src/runners/: clock.cpp  clock.h  collision.h  collision_engine.cpp  collision_engine.h  collision_engine_3d.cpp  collision_response.cpp  collision_response.h  hotspotmanager.cpp  hotspotmanager.h  lighting.cpp  lighting.h  mousemanager.cpp  mousemanager.h  scheduler.cpp  scheduler.h  walkarea.cpp  walkarea.h
src/shaders/: batchshader.cpp  batchshader.h  lightshader.cpp  lightshader.h  shaders.h  tex.fs  texpal.fs
src/shapes/: aabb.cpp  aabb.h  aabb3d.cpp  aabb3d.h  circle.cpp  circle.h  compound.cpp  compound.h  convexpoly.cpp  convexpoly.h  intersector.cpp  intersector.h  intersector2d.cpp  intersector2d.h  polygon.cpp  polygon.h  polyline.cpp  polyline.h  raycaster.cpp  raycaster.h
src/shapes3d/: aabb3d.cpp  aabb3d.h  seg3d.cpp  seg3d.h
src/skeletal/: animation.cpp  animation.h  joint_transform.cpp  joint_transform.h  keyframe.h  skeletal_collider.cpp  skeletal_collider.h  skeletal_model.cpp  skeletal_model.h  skeletalrenderer.cpp  skeletalrenderer.h
src/states/: attack.cpp  attack.h  bounce.cpp  bounce.h  climb.cpp  climb.h  foewalk2d.cpp  foewalk2d.h  idle.cpp  idle.h  playerwalk2d.cpp  playerwalk2d.h  playerwalk3d.cpp  playerwalk3d.h  top2d.cpp  top2d.h  walk.cpp  walk.h  walk2d.cpp  walk2d.h  (+2 more)
test/: new_game.py  newgame.sh
(+160 files in other folders)
